--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,32 +29,195 @@ body[theme="dark"] {
 // block body's background propagation
 // see: https://stackoverflow.com/a/61265706
 
+html {
+  height: 100%;
+}
+
 html,
 body {
   background: white;
 }
 
-html {
-  height: 100%;
-}
 
 body {
   color: black;
   background: white;
-
+  margin: 0;
   font-family: monospace;
   font-size: 1.2rem;
   line-height: 2rem;
-  margin: 0;
   min-height: 100%;
   overflow-wrap: break-word;
 
+  // =================== header ===
+  header {
+    background: black;
+    color: white;
+    padding: 2rem 2rem 2rem 2rem;
+
+
+
+    nav {
+      align-content: left;
+
+      a {
+        display: inline-block;
+        // padding-right: 1rem;
+        // padding-left: 1rem;
+        margin-right: 2rem;
+        margin-bottom: 2rem;
+        padding: 1rem;
+        background-color: white;
+        color: black;
+      }
+
+    }
+
+    p:not(.post-meta) {
+      display: block;
+      font-weight: bolder;
+      margin-right: 0rem;
+      margin-left: 0rem;
+      margin-top: 0rem;
+      margin-bottom: 0rem;
+
+
+      a {
+        color: white;
+      }
+    }
+
+    .post-meta {
+      text-align: left;
+      display: block;
+      background-color: black;
+      color: white;
+      display: inline-block;
+
+      margin-right: 2rem;
+      margin-left: 0rem;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+
+      ::before {
+        content: "░░ ";
+      }
+    }
+
+
+    h1 {
+      line-height: 3rem;
+      display: block;
+      background-color: black;
+      color: white;
+    }
+  }
+
+  // =================== main ===
+  main {
+    padding: 2rem;
+
+    a {
+      text-underline-offset: 30%;
+      color: black;
+    }
+
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      margin-top: 0rem;
+      line-height: 3rem;
+      font-family: monospace;
+      display: block;
+    }
+
+    h2::before {
+      content: "█░░░░ ";
+    }
+
+    h3::before {
+      content: "██░░░ ";
+    }
+
+    h4::before {
+      content: "███░░ ";
+    }
+
+    h5::before {
+      content: "████░ ";
+    }
+
+    h6::before {
+      content: "█████ ";
+    }
+
+    p {
+      // margin: 1rem 0;
+      margin: 0rem 2rem 2rem 0rem;
+    }
+
+    li {
+      // margin: 0.4rem 0;
+      margin: 0rem 2rem 1rem 0rem;
+    }
+
+    li::marker {
+      // color: white;
+      content: "░ ";
+      // padding-left: 1rem;
+    }
+
+    ol,
+    ul {
+      margin-left: 0rem;
+      margin-block-start: 1rem;
+      margin-block-end: 1rem;
+    }
+
+    code {
+      color: white;
+      background: black;
+    }
+
+    pre {
+
+      background-color: white !important;
+
+      code {
+        display: block;
+        overflow-x: auto;
+        padding: 2rem;
+      }
+    }
+
+    blockquote {
+      font-style: italic;
+      border-left: 1rem solid black;
+      margin: 0rem;
+      padding-left: 1rem;
+
+      p {
+        margin: 0;
+        padding: 0rem;
+      }
+    }
+
+    img {
+      max-width: 100%;
+      display: block;
+      margin: 0 auto;
+    }
+
+  }
+
+  // =================== fotter ===
   footer {
-    // background: black;
-    // color: white;
+    background: black;
+    color: white;
 
 
-    // nav {
     a {
       display: inline-block;
       padding-right: 1rem;
@@ -62,48 +225,14 @@ body {
       margin: 0.5rem;
       background-color: black;
       color: white;
+      text-underline-offset: 30%;
     }
 
-    // }
   }
 
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin-top: 0rem;
-    line-height: 3rem;
-    font-family: monospace;
-    padding: 3rem 3rem 0rem 3rem;
-    display: block;
-    // color: white;
-    // background-color: black;
-
-  }
 }
 
-h1::before {}
 
-h2::before {
-  content: "█░░░░ ";
-}
-
-h3::before {
-  content: "██░░░ ";
-}
-
-h4::before {
-  content: "███░░ ";
-}
-
-h5::before {
-  content: "████░ ";
-}
-
-h6::before {
-  content: "█████ ";
-}
 
 
 
@@ -111,29 +240,8 @@ hr {
   margin: 2rem 0;
 }
 
-p {
-  // margin: 1rem 0;
-  padding: 0rem 0rem 0rem 3rem;
-}
 
-li {
-  // margin: 0.4rem 0;
-  padding: 0rem 3rem 1rem 1rem;
-}
 
-li::marker {
-  // color: white;
-  content: "░";
-  // padding-left: 1rem;
-}
-
-ol,
-ul {
-  padding-left: 3rem;
-
-  margin-block-start: 1rem;
-  margin-block-end: 1rem;
-}
 
 *:target {
   background: yellow;
@@ -142,7 +250,6 @@ ul {
 .w {
   max-width: 100vw;
   margin: 0 auto;
-  // padding: 4rem 2rem;
 }
 
 hr {
@@ -167,43 +274,7 @@ th,
 td {
   border: thin solid black;
   border-collapse: collapse;
-  padding: 0.4rem;
-}
-
-code {
-  color: white;
-  background: black;
-}
-
-pre {
-
-  background-color: white !important;
-
-  code {
-    display: block;
-    overflow-x: auto;
-    white-space: pre-wrap;
-    padding: 3rem;
-    margin: 3rem;
-  }
-}
-
-blockquote {
-  font-style: italic;
-  border-left: thick solid black;
-  padding: 3rem;
-  margin: 0.5rem;
-
-  p {
-    margin: 0;
-    padding: 0rem;
-  }
-}
-
-img {
-  max-width: 100%;
-  display: block;
-  margin: 0 auto;
+  padding: 1rem;
 }
 
 .footnote-definition {
@@ -221,82 +292,5 @@ img {
 
 nav,
 .taxonomies {
-  text-align: center;
-}
-
-header {
-  background: black;
-  color: white;
-
-
-  nav {
-    a {
-      display: inline-block;
-      padding-right: 1rem;
-      padding-left: 1rem;
-      margin: 0.5rem;
-      background-color: black;
-      color: white;
-    }
-
-  }
-
-  p:not(.post-meta) {
-    display: block;
-    font-weight: bolder;
-    padding-right: 3rem;
-    padding-left: 3rem;
-    padding-top: 0rem;
-    padding-bottom: 0rem;
-
-
-    a {
-      color: white;
-    }
-  }
-
-  .post-meta {
-    text-align: left;
-    display: block;
-    background-color: black;
-    color: white;
-    display: inline-block;
-
-    padding-right: 3rem;
-    padding-left: 3rem;
-    padding-top: 0rem;
-    padding-bottom: 0rem;
-
-    ::before {
-
-      content: "░░ ";
-
-    }
-  }
-
-
-  h1 {
-    line-height: 3rem;
-    display: block;
-    background-color: black;
-    color: white;
-    padding: 0rem 3rem 3rem 3rem;
-    margin: 0rem;
-
-    // filter: invert(1);
-  }
-}
-
-main a {
-  display: inline-block;
-  padding-right: 1rem;
-  padding-left: 1rem;
-  margin: 0.5rem;
-  background-color: black;
-  color: white;
-}
-
-
-a {
-  text-decoration: none;
+  text-align: left;
 }
